Integrado com Api

--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -37,8 +37,10 @@
 </ion-content>
 
 <ion-footer>
-  <button ion-button clear round block ion-button icon-start color="primary" (click)="go2Home()">
-    <ion-icon name="home"></ion-icon>
-    Home
-  </button>
+  <ion-toolbar>
+    <button ion-button clear round block ion-button icon-start color="primary" (click)="go2Home()">
+      <ion-icon name="home"></ion-icon>
+      Home
+    </button>
+  </ion-toolbar>
 </ion-footer>
