--- a/src/pages/scan/scan.html
+++ b/src/pages/scan/scan.html
@@ -20,7 +20,7 @@
 
   <ion-row *ngIf="erro != ''">
     <ion-col col-12>
-      <p text-center>{{ erro }}</p>
+      <p text-center style="color: #f53d3d">{{ erro }}</p>
     </ion-col>
   </ion-row>
 
