--- a/src/pages/new/new.html
+++ b/src/pages/new/new.html
@@ -15,9 +15,9 @@
     </ion-col>
   </ion-row>
 
-  <ion-row *ngIf="error != ''">
+  <ion-row *ngIf="erro != ''">
     <ion-col col-12>
-      <p text-center>{{ error }}</p>
+      <p text-center style="color: #f53d3d">{{ erro }}</p>
     </ion-col>
   </ion-row>
 
