--- a/src/pages/new/new.html
+++ b/src/pages/new/new.html
@@ -17,7 +17,7 @@
 
   <ion-row *ngIf="erro != ''">
     <ion-col col-12>
-      <p text-center style="color: #f53d3d">{{ erro }}</p>
+      <p class="error_txt" >{{ erro }}</p>
     </ion-col>
   </ion-row>
 
