--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -12,13 +12,13 @@
   <ion-row>
     <ion-col col-12>
       <div class="img">
-        <img *ngIf="id" class="img" [src]="'https://api.qrserver.com/v1/create-qr-code/?size=350x350&data='+id" alt="QR Code">
+        <img *ngIf="QR.id" class="img" [src]="'https://api.qrserver.com/v1/create-qr-code/?size=350x350&data='+id" alt="QR Code">
       </div>
     </ion-col>
 
     <ion-col col-12>
       <div class="id">
-        <pre text-center>{{id}}</pre>
+        <pre text-center>{{QR.id}}</pre>
       </div>
     </ion-col>
   </ion-row>
@@ -26,7 +26,7 @@
   <ion-row>
     <ion-col col-12>
       <div class="txt">
-        <pre>{{txt}}</pre>
+        <pre>{{QR.txt}}</pre>
       </div>
       <button ion-button clear round block color="secondary" (click)="copy2ClipBoard()">
         Copy to clipboard
