Removido Menu, Botões menores e PWA ativo

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,6 @@
 
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-buttons start>
-          <button ion-button icon-only (click)="openMenu()">
-            <ion-icon name="menu"></ion-icon>
-          </button>
-        </ion-buttons>
-    
         <ion-title>InstantShare</ion-title>
       </ion-toolbar>
     </ion-header>
@@ -33,7 +27,7 @@
 
   <ion-row>
     <ion-col>
-      <button class="options" color="dark" clear large ion-button icon-start (click)="showRecents()">
+      <button class="options" color="primary" clear large ion-button icon-start (click)="showRecents()">
         <ion-icon name="time"></ion-icon>
         Recents
       </button>
