--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -12,7 +12,7 @@
   <ion-row>
     <ion-col col-12>
       <div class="img">
-        <img *ngIf="QR.id" class="img" [src]="'https://api.qrserver.com/v1/create-qr-code/?size=350x350&data='+id" alt="QR Code">
+        <img *ngIf="QR.id" class="img" [src]="'https://api.qrserver.com/v1/create-qr-code/?size=350x350&data='+QR.id" alt="QR Code">
       </div>
     </ion-col>
 
